✨ feat: update tensor notebook

--- a/Basics/tensors.ipynb
+++ b/Basics/tensors.ipynb
@@ -3,6 +3,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
