✨ feat: add tensor basics

--- a/Basics/tensor.ipynb
+++ b/Basics/tensor.ipynb
@@ -57,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "data = [[1, 2],[3, 4]]\n",
+    "data = [[1, 2], [3, 4]]\n",
     "x_data = torch.tensor(data)"
    ]
   },
@@ -116,10 +116,10 @@
     }
    ],
    "source": [
-    "x_ones = torch.ones_like(x_data) # retains the properties of x_data\n",
+    "x_ones = torch.ones_like(x_data)  # retains the properties of x_data\n",
     "print(f\"Ones Tensor: \\n {x_ones} \\n\")\n",
     "\n",
-    "x_rand = torch.rand_like(x_data, dtype=torch.float) # overrides the datatype of x_data\n",
+    "x_rand = torch.rand_like(x_data, dtype=torch.float)  # overrides the datatype of x_data\n",
     "print(f\"Random Tensor: \\n {x_rand} \\n\")"
    ]
   },
@@ -159,7 +159,10 @@
     }
    ],
    "source": [
-    "shape = (2,3,)\n",
+    "shape = (\n",
+    "    2,\n",
+    "    3,\n",
+    ")\n",
     "rand_tensor = torch.rand(shape)\n",
     "ones_tensor = torch.ones(shape)\n",
     "zeros_tensor = torch.zeros(shape)\n",
@@ -205,7 +208,7 @@
     }
    ],
    "source": [
-    "tensor = torch.rand(3,4)\n",
+    "tensor = torch.rand(3, 4)\n",
     "\n",
     "print(f\"Shape of tensor: {tensor.shape}\")\n",
     "print(f\"Datatype of tensor: {tensor.dtype}\")\n",
@@ -296,7 +299,7 @@
     "print(f\"First row: {tensor[0]}\")\n",
     "print(f\"First column: {tensor[:, 0]}\")\n",
     "print(f\"Last column: {tensor[..., -1]}\")\n",
-    "tensor[:,1] = 0\n",
+    "tensor[:, 1] = 0\n",
     "print(tensor)"
    ]
   },
@@ -358,8 +361,8 @@
     }
    ],
    "source": [
-    "b = torch.ones(3,4,5)\n",
-    "b.shape , b.T.shape"
+    "b = torch.ones(3, 4, 5)\n",
+    "b.shape, b.T.shape"
    ]
   },
   {
