--- a/Basics/tensors_example.ipynb
+++ b/Basics/tensors_example.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "tensor = torch.rand( (3,5),dtype=torch.float16)\n",
+    "tensor = torch.rand((3, 5), dtype=torch.float16)\n",
     "print(tensor.add_(5).shape)\n",
     "tensor.add_(5) @ tensor.T"
    ]
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "tensor = torch.rand( (3,3),dtype=torch.float16)\n",
+    "tensor = torch.rand((3, 3), dtype=torch.float16)\n",
     "tensor"
    ]
   },
@@ -108,8 +108,8 @@
     }
    ],
    "source": [
-    "ones = torch.ones( (3,6),dtype=torch.int)\n",
-    "zeros = torch.zeros_like(ones, dtype= torch.float16)\n",
+    "ones = torch.ones((3, 6), dtype=torch.int)\n",
+    "zeros = torch.zeros_like(ones, dtype=torch.float16)\n",
     "zeros + ones"
    ]
   },
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = np.array((3,5), dtype=np.float16)\n",
+    "n = np.array((3, 5), dtype=np.float16)\n",
     "t = torch.from_numpy(n)\n",
     "n = t.numpy()"
    ]
